# exam-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  up.sql
doc/: auth.md  classs.md  exam.md  exam_attempts.md  progress_system.md  questions.md  user.md
src/: config.rs  database.rs  errors.rs  main.rs  routes.rs
src/handlers/: auth.rs  class.rs  exam.rs  exam_attempt.rs  mod.rs  progress.rs  question.rs  user.rs
src/middleware/: auth.rs
src/models/: attempt.rs  class.rs  exams.rs  mod.rs  progress.rs  question.rs  user.rs
src/services/: class.rs  exam.rs  exam_attempt.rs  mod.rs  progress.rs  question.rs  user.rs
src/tests/: class_tests.rs  exam_attempt_tests.rs  exam_tests.rs  mod.rs  question_tests.rs  service_tests.rs  user_service_tests.rs
src/utils/: jwt.rs  mod.rs  pagination.rs  password.rs
